--- a/src/arches_bchp/arches_bchp/templates/views/components/widgets/base.htm
+++ b/src/arches_bchp/arches_bchp/templates/views/components/widgets/base.htm
@@ -8,7 +8,7 @@
 <!-- ko if: !configForm  && state === 'report' -->
 <!-- ko if: !ko.unwrap(hideEmptyNodes) || (ko.unwrap(hideEmptyNodes) === true && displayValue()) -->
 {% block report %}
-<dt data-bind="text: label()"></dt>
+<dt data-bind="text: label(), class: nodeCssClasses"></dt>
 <dd data-bind="text: displayValue() || $root.translations.none"></dd>
 {% endblock report %}
 <!-- /ko -->
@@ -16,7 +16,7 @@
 
 <!-- ko if: !configForm  && state === 'display_value' -->
 {% block display_value %}
-<span data-bind="text: displayValue()"></span>
+<span data-bind="text: displayValue(), class: nodeCssClasses"></span>
 {% endblock display_value %}
 <!-- /ko -->
 
