--- a/src/arches_bchp/arches_bchp/templates/views/components/widgets/borden-number-widget.htm
+++ b/src/arches_bchp/arches_bchp/templates/views/components/widgets/borden-number-widget.htm
@@ -1,16 +1,14 @@
-{% extends "views/components/widgets/base.htm" %}
+{% extends "views/components/widgets/text.htm" %}
 {% load template_tags %}
 {% load i18n %}
 
 {% block form %}
-<div class="row widget-wrapper">
+<div class="row widget-wrapper" data-bind="let: {uid: Math.random().toString()}, class: nodeCssClasses">
     <div class="form-group" style="position: relative;">
         <div style="max-width: 600px; position: relative">
-            <div class="widget-inline-tools-collapser" data-bind=" click: function() {
-                showi18nOptions(!showi18nOptions());
-            }">
-                <label class="control-label widget-input-label" for="" data-bind="text:label"></label>
-                <span>
+            <div class="" tabindex="0">
+                <span class="control-label widget-input-label" data-bind="text:label"></span>
+                <span style="display: none">
                     <i class="fa" data-bind="{
                         css: {
                             'fa-caret-down' : !showi18nOptions(),
@@ -20,19 +18,23 @@
                     <span data-bind="text: $root.translations.languages"></span>
                 </span>
             </div>
-            <div class="form-horizontal" data-bind="if: showi18nOptions">
+            <div data-bind="if: showi18nOptions, attr: {id: uid}">
                 <div class="i18n-style-tools-panel">
                     <div style="display: flex; flex-direction: column; max-width:600px">
-                        <label class="widget-input-label" for="lang_dd">
-                            <span data-bind="text: $root.translations.language"></span>
-                        </label>
-                        <select id="lang_dd" style="flex:1" name="language" data-bind="options: languages, optionsText: function(item){return item.name + ' (' + item.code + ')'}, value: currentLanguage, chosen: {width:'100%'}">
-                        </select>
-                        <label class="widget-input-label" for="lang_dir">
-                            <span data-bind="text: $root.translations.direction"></span>
-                        </label>
+                        <span class="control-label widget-input-label" data-bind="text: $root.translations.language"></span>
                         <select
-                                id="lang_dir"
+                                style="flex:1"
+                                name="language"
+                                data-bind="
+                                options: languages,
+                                optionsText: function(item){return item.name + ' (' + item.code + ')'},
+                                value: currentLanguage,
+                                chosen: {width:'100%'},
+                                attr: {'aria-label': $root.translations.language}
+                            "
+                        ></select>
+                        <span class="control-label widget-input-label" data-bind="text: $root.translations.direction"></span>
+                        <select
                                 style="flex:1"
                                 name="language"
                                 data-bind="
@@ -44,132 +46,25 @@
                                     { text: $root.translations.leftToRight, value: 'ltr' },
                                     { text: $root.translations.rightToLeft, value: 'rtl' },
                                 ],
+                                attr: {'aria-label': $root.translations.direction}
                             "
                         ></select>
                     </div>
                 </div>
             </div>
-            <!-- ko if: node -->
-            <i data-bind="css: {'ion-asterisk widget-label-required': node.isrequired}"></i>
-            <!-- /ko -->
-            <div class="col-xs-12" style="display:flex;flex-wrap: wrap;flex-direction: column;">
-                <input type="text" style="flex:1" data-bind="textInput: currentText, attr: {placeholder: placeholder, maxlength: maxLength, disabled: disable, dir: currentDirection}" class="form-control input-lg widget-input">
+            <div class="col-xs-12" style="display:flex;flex-wrap: wrap;flex-direction: row;">
+                <input type="text" style="flex:1; max-width: 200px" class="form-control input-lg widget-input"
+                       data-bind="textInput: currentText,
+                        attr: {placeholder: placeholder, maxlength: maxLength, disabled: true, 'aria-label': label, dir: currentDirection},
+                ">
+                <div class="install-buttons" style="max-height: 36px; margin-left: 5px;">
+                    <button class="btn btn-shim btn-labeled btn-lg fa fa-plus btn-primary" data-bind="attr: {disabled: disable}, click: function(){getBordenNumber()}">
+                        <span>Generate Borden Number</span>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
 </div>
 {% endblock form %}
 
-{% block config_form %}
-<div class="control-label">
-    <span data-bind="text: $root.translations.placeholder"></span>
-</div>
-<div class="col-xs-12 pad-no crud-widget-container">
-    <input
-            type=""
-            id=""
-            class="form-control input-md widget-input"
-            data-bind="
-            attr: {placeholder: $root.translations.placeholder},
-            textInput: placeholder
-        "
-    >
-</div>
-<div class="control-label">
-    <span data-bind="text: $root.translations.maxLength"></span>
-</div>
-<div class="col-xs-12 pad-no crud-widget-container">
-    <input
-            type=""
-            id=""
-            class="form-control input-md widget-input"
-            data-bind="
-            attr: {placeholder: $root.translations.maxLength},
-            textInput: maxLength
-        "
-    >
-</div>
-<div class="form-group" style="position: relative;">
-    <div style="max-width: 600px; position: relative">
-        <div class="widget-inline-tools-collapser" data-bind=" click: function() {
-        showi18nOptions(!showi18nOptions());
-    }">
-            <label class="control-label widget-input-label" for="" data-bind="text: $root.translations.defaultValue"></label>
-            <span>
-            <i class="fa" data-bind="{
-                css: {
-                    'fa-caret-down' : !showi18nOptions(),
-                    'fa-caret-up' : showi18nOptions(),
-                }
-            }"></i>
-            <span data-bind="text: $root.translations.languages"></span>
-        </span>
-        </div>
-        <div class="form-horizontal" data-bind="if: showi18nOptions">
-            <div class="i18n-style-tools-panel">
-                <div style="display: flex; flex-direction: column; max-width:600px">
-                    <label class="widget-input-label" for="lang_dd">
-                        <span data-bind="text: $root.translations.language"></span>
-                    </label>
-                    <select id="lang_dd" style="flex:1" name="language" data-bind="options: languages, optionsText: function(item){return item.name + ' (' + item.code + ')'}, value: currentDefaultLanguage, chosen: {width:'100%'}">
-                    </select>
-                    <label class="widget-input-label" for="lang_dir">
-                        <span data-bind="text: $root.translations.direction"></span>
-                    </label>
-                    <select
-                            id="lang_dir"
-                            style="flex:1"
-                            name="language"
-                            data-bind="
-                        value: currentDefaultDirection,
-                        chosen: {'width':'100%'},
-                        optionsText: 'text',
-                        optionsValue: 'value',
-                        options: [
-                            { text: $root.translations.leftToRight, value: 'ltr' },
-                            { text: $root.translations.rightToLeft, value: 'rtl' },
-                        ],
-                    "
-                    ></select>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-12" style="display:flex;flex-wrap: wrap;flex-direction: column;">
-            <input type="text" style="flex:1" data-bind="textInput: currentDefaultText, attr: {placeholder: placeholder, maxlength: maxLength, disabled: disable, dir: currentDefaultDirection}" class="form-control input-lg widget-input">
-        </div>
-    </div>
-</div>
-<div class="node-config-item">
-    <div class="control-label">
-        <span data-bind="text: $root.translations.disabled"></span>
-    </div>
-    <div class="pad-no">
-        <div
-                data-bind="
-                component: {
-                    name: 'views/components/simple-switch',
-                    params: {
-                        value: uneditable,
-                        config:{label: $root.translations.disableEditing, subtitle: $root.translations.preventUsersFromEditingValue}
-                    }
-                }
-            "
-        ></div>
-    </div>
-</div>
-{% endblock config_form %}
-
-<!-- ko if: !configForm  && state === 'display_value' -->
-{% block display_value %}
-<span data-bind="text: displayValue && displayValue() && currentLanguage() && displayValue()[currentLanguage().code] && displayValue()[currentLanguage().code]['value'] ? displayValue()[currentLanguage().code]['value'] : '' || $root.translations.none"></span>
-{% endblock display_value %}
-<!-- /ko -->
-
-<!-- ko if: !configForm  && state === 'report' -->
-<!-- ko if: !ko.unwrap(hideEmptyNodes) || ko.unwrap(hideEmptyNodes) === true && displayValue() -->
-{% block report %}
-<dt data-bind="text: label"></dt>
-<dd data-bind="text: displayValue() && currentLanguage() && displayValue()[currentLanguage().code] && displayValue()[currentLanguage().code]['value'] ? displayValue()[currentLanguage().code]['value'] : $root.translations.none"></dd>
-{% endblock report %}
-<!-- /ko -->
-<!-- /ko -->
