--- a/src/arches_fossils/arches_fossils/media/css/project.css
+++ b/src/arches_fossils/arches_fossils/media/css/project.css
@@ -25,6 +25,10 @@ img.legend-swatch {
 }
  */
 
+/****************************/
+/* Layer colour definitions */
+/****************************/
+/* FRPC */
 img.frpc-high {
     background: rgba(136,65,157,0.6);
     border-color: rgba(136,65,157,1);
@@ -43,3 +47,33 @@ img.frpc-very-low {
     background: rgba(237,248,251,0.6);
     border-color: rgba(237,248,251,1);
 }
+
+/* Bedrock */
+img.bedrock-intrusive {
+    background: rgba(246,239,247,0.3);
+    border-color: rgba(246,239,247,1);
+}
+
+img.bedrock-metamorphic {
+    background: rgba(189,201,225, 0.3);
+    border-color: rgba(246,239,247,1);
+}
+
+img.bedrock-sedimentary {
+    background: rgba(103,169,207, 0.4);
+    border-color: rgba(103,169,207,1);
+}
+
+img.bedrock-ultramafic {
+    background: rgba(28,144,153, 0.3);
+    border-color: rgba(28,144,153, 1);
+}
+
+img.bedrock-volcanic {
+    background: rgba(1,108,89, 0.3);
+    border-color: rgba(1,108,89, 1);
+}
+
+/********************************/
+/* END Layer colour definitions */
+/********************************/
