--- a/src/arches_fossils/arches_fossils/media/css/project.css
+++ b/src/arches_fossils/arches_fossils/media/css/project.css
@@ -1,79 +1,3 @@
 @import "project_common.css";
+@import "map_legend.css";
 
-/* Map Legend definitions  Moved to common */
-/*
-.legend-listing {
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-
-.legend-listing .legend-content {
-    padding-top: 5px;
-}
-
-.layer-listing-icon::before {
-    width: 20px;
-    height: 20px;
-}
-
-img.legend-swatch {
-    border-style:solid;
-    border-width:1px;
-    height:10px;
-    margin:0 5px;
-    width:10px;
-}
- */
-
-/****************************/
-/* Layer colour definitions */
-/****************************/
-/* FRPC */
-img.frpc-high {
-    background: rgba(136,65,157,0.6);
-    border-color: rgba(136,65,157,1);
-}
-img.frpc-medium {
-    background: rgba(140,150,198,0.6);
-    border-color: rgba(140,150,198,1);
-}
-
-img.frpc-low {
-    background: rgba(179,205,227,0.6);
-    border-color: rgba(179,205,227,1);
-}
-
-img.frpc-very-low {
-    background: rgba(237,248,251,0.6);
-    border-color: rgba(237,248,251,1);
-}
-
-/* Bedrock */
-img.bedrock-intrusive {
-    background: rgba(246,239,247,0.3);
-    border-color: rgba(246,239,247,1);
-}
-
-img.bedrock-metamorphic {
-    background: rgba(189,201,225, 0.3);
-    border-color: rgba(246,239,247,1);
-}
-
-img.bedrock-sedimentary {
-    background: rgba(103,169,207, 0.4);
-    border-color: rgba(103,169,207,1);
-}
-
-img.bedrock-ultramafic {
-    background: rgba(28,144,153, 0.3);
-    border-color: rgba(28,144,153, 1);
-}
-
-img.bedrock-volcanic {
-    background: rgba(1,108,89, 0.3);
-    border-color: rgba(1,108,89, 1);
-}
-
-/********************************/
-/* END Layer colour definitions */
-/********************************/
