514 - Add legend line definition, configure cadastral overlay

--- a/src/arches_fossils/arches_fossils/media/css/map_legend.css
+++ b/src/arches_fossils/arches_fossils/media/css/map_legend.css
@@ -2,26 +2,6 @@
 /* Map Legends   */
 /*****************/
 
-/* FRPC */
-img.frpc-high {
-    background: rgba(136,65,157,0.6);
-    border-color: rgba(136,65,157,1);
-}
-img.frpc-medium {
-    background: rgba(140,150,198,0.6);
-    border-color: rgba(140,150,198,1);
-}
-
-img.frpc-low {
-    background: rgba(179,205,227,0.6);
-    border-color: rgba(179,205,227,1);
-}
-
-img.frpc-very-low {
-    background: rgba(237,248,251,0.6);
-    border-color: rgba(237,248,251,1);
-}
-
 /* Bedrock */
 img.bedrock-intrusive {
     background: rgba(246,239,247,0.3);
@@ -47,3 +27,30 @@ img.bedrock-volcanic {
     background: rgba(1,108,89, 0.3);
     border-color: rgba(1,108,89, 1);
 }
+
+/* Cadastral ParcelMap */
+img.cadastral {
+    background: rgb(118, 42, 131);
+}
+
+
+/* FRPC */
+img.frpc-high {
+    background: rgba(136,65,157,0.6);
+    border-color: rgba(136,65,157,1);
+}
+img.frpc-medium {
+    background: rgba(140,150,198,0.6);
+    border-color: rgba(140,150,198,1);
+}
+
+img.frpc-low {
+    background: rgba(179,205,227,0.6);
+    border-color: rgba(179,205,227,1);
+}
+
+img.frpc-very-low {
+    background: rgba(237,248,251,0.6);
+    border-color: rgba(237,248,251,1);
+}
+
