--- a/src/arches_common/media/css/project_common.css
+++ b/src/arches_common/media/css/project_common.css
@@ -182,6 +182,13 @@ img.legend-swatch {
     margin:0 5px;
     width:10px;
 }
+
+img.legend-line {
+    height: 2px;
+    width: 4px;
+    vertical-align: middle;
+    margin-right: 4px;
+}
 /******************************/
 /* END Map Legend Definitions */
 /******************************/
