514 - Add FRPC Overburden config

--- a/src/arches_fossils/arches_fossils/media/css/map_legend.css
+++ b/src/arches_fossils/arches_fossils/media/css/map_legend.css
@@ -54,3 +54,23 @@ img.frpc-very-low {
     border-color: rgba(237,248,251,1);
 }
 
+/* FRPC Overburden */
+img.frpc_ovb-high {
+    background: rgba(82,82,82,.2);
+    border-color: rgba(82,82,82,1);
+}
+img.frpc_ovb-medium {
+    background: rgba(150,150,150,.2);
+    border-color: rgba(150,150,150,1);
+}
+
+img.frpc_ovb-low {
+    background: rgba(204,204,204,.2);
+    border-color: rgba(204,204,204,1);
+}
+
+img.frpc_ovb-very-low {
+    background: rgba(247,247,247,.2);
+    border-color: rgba(247,247,247,1);
+}
+
