514 - Add NTS 50 and 250 configurations

--- a/src/arches_fossils/arches_fossils/media/css/map_legend.css
+++ b/src/arches_fossils/arches_fossils/media/css/map_legend.css
@@ -101,6 +101,21 @@ img.parks-national {
     border-color: rgba(27,120,55, 1);
 }
 
+/* Municipal Boundaries */
+img.nts250 {
+    background: rgba(0, 0, 0, 1);
+    width: 10px;
+    margin-right: 5px;
+    height: 1px;
+}
+
+img.nts50 {
+    background: rgba(152, 152, 152, 1);
+    width: 10px;
+    margin-right: 5px;
+    height: 1px;
+}
+
 /* Provincial Parks, Protected Areas and Ecological Reserves */
 img.parks-protected-area {
     background: rgba(166,219,160, 0.3);
