--- a/src/arches_fossils/arches_fossils/media/css/map_legend.css
+++ b/src/arches_fossils/arches_fossils/media/css/map_legend.css
@@ -70,3 +70,22 @@ img.frpc_ovb-very-low {
     background: rgba(247,247,247,.2);
     border-color: rgba(247,247,247,1);
 }
+
+/* Resource Model legends */
+/* Collection event */
+img.collection-event {
+    background: rgba(244,109,67,0.7);
+    height: 15px;
+    width: 15px;
+    border: solid rgba(255,255,255,0.4) 4px;
+}
+
+img.important-fossil-area {
+    background: rgba(215,48,39,0.5);
+    border-color: rgb(215,48,39);
+}
+
+img.provincially-protected-site {
+    background: rgba(255,0,0, 0.5);
+    border-color: rgba(255,0,0, 1);
+}
