--- a/src/arches_fossils/arches_fossils/media/css/map_legend.css
+++ b/src/arches_fossils/arches_fossils/media/css/map_legend.css
@@ -89,3 +89,48 @@ img.provincially-protected-site {
     background: rgba(255,0,0, 0.5);
     border-color: rgba(255,0,0, 1);
 }
+
+/* Cadastral layer */
+img.cadastral-crown-agency {
+    background: rgba(255,209,257, 0.6);
+    border-color: rgba(255,195,230, 1);
+}
+img.cadastral-crown-provincial {
+    background: rgba(255,190,232, 0.6);
+    border-color: rgba(255, 159, 229, 1);
+}
+
+img.cadastral-federal {
+    background: rgba(128, 177,211, 0.6);
+    border-color: rgba(117, 166, 209, 1);
+}
+
+img.cadastral-first-nations {
+    background: rgba(215,194,159, 0.6);
+    border-color: rgba(181,160,124, 1);
+}
+
+img.cadastral-mixed {
+    background: rgba(252,128,114, 0.6);
+    border-color: rgba(252,128,114, 1);
+}
+
+img.cadastral-municipal {
+    background: rgba(36,174,96, 0.6);
+    border-color: rgba(48, 171, 69, 1);
+}
+
+img.cadastral-private {
+    background: rgba(255,235,118, 0.6);
+    border-color: rgba(255,206,85, 1);
+}
+
+img.cadastral-unclassified {
+    background: rgba(157,157,157, 0.6);
+    border-color: rgba(135,135,135, 1);
+}
+
+img.cadastral-untitled_provincial {
+    background: rgba(206,180,253, 0.6);
+    border-color: rgba(167,150,198, 1);
+}
