dev - Simplify colour match logic 514 - Configure Digital Road Atlas overlay to match iMap

--- a/src/arches_common/media/css/map_legend_common.css
+++ b/src/arches_common/media/css/map_legend_common.css
@@ -151,3 +151,52 @@ img.trim-waterlines {
     background: rgba(98, 206, 217, 1);
     width: 10px;
 }
+
+/* Digital Road Atlas */
+img.road-freeway {
+    background: rgb(255, 51, 51);
+    width: 10px;
+    height: 3px;
+}
+
+img.road-arterial {
+    background: rgb(161, 123, 105);
+    width: 10px;
+    height: 2px;
+}
+
+img.road-local {
+    background: rgb(247, 196, 100);
+    width: 10px;
+    height: 1px;
+}
+
+img.road-alleyway {
+    background: rgb(253, 169, 152);
+    width: 10px;
+    height: 1px;
+}
+
+img.road-trail {
+    background: rgb(148, 249, 82);
+    width: 10px;
+    height: 1px;
+}
+
+img.road-restricted {
+    background: rgb(157, 51, 185);
+    width: 10px;
+    height: 1px;
+}
+
+img.road-runway {
+    background: rgb(36, 36, 138);
+    width: 10px;
+    height: 1px;
+}
+
+img.road-other {
+    background: rgb(152, 152, 152);
+    width: 10px;
+    height: 1px;
+}
