556 - Update details tab for model change

--- a/src/bcrhp/bcrhp/templates/views/report-templates/bcrhp_site.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/bcrhp_site.htm
@@ -219,7 +219,7 @@
                     <div class="grid-row-1 grid-col-3 bc-details-images">
                     <!-- ko let: { photocard: getCardWithName('Images') } -->
                     <!-- ko let: { photoWidget: getWidgetWithLabel(photocard, 'Site Image') } -->
-                        <!-- ko let: { titleWidget: getWidgetWithLabel(photocard, 'Image Title') } -->
+                        <!-- ko let: { titleWidget: getWidgetWithLabel(photocard, 'Image Caption') } -->
                         <!-- ko let: { descriptionWidget: getWidgetWithLabel(photocard, 'Image Description') } -->
                         <dl class="dl-vertical">
                             <dt data-bind="class: photoWidget.node.alias"></dt>
