674 - Hide search results in printed details page.

--- a/src/common/media/css/project_common.css
+++ b/src/common/media/css/project_common.css
@@ -296,3 +296,10 @@ img.bc-details-image
         break-inside: avoid-column;
     }
 }
+
+@media only print {
+    section.search-results-panel {
+        display: none;
+    }
+
+}
