--- a/src/bcfms/bcfms/templates/views/components/cards/default.htm
+++ b/src/bcfms/bcfms/templates/views/components/cards/default.htm
@@ -334,7 +334,9 @@
                         }
                     }, css:{ "active": widget.selected, "hover": widget.hovered, "widget-preview": self.preview
                 }, click: function(data, e) { if (!widget.selected() && self.preview) {widget.selected(true);}
-            }, event: { mouseover: function(){ if (self.preview){widget.hovered(true) } }, mouseout: function(){ if (self.preview){widget.hovered(null)} } }, visible: widget.visible'></div>
+            }, event: { mouseover: function(){ if (self.preview){widget.hovered(true) } },
+            mouseout: function(){ if (self.preview){widget.hovered(null)} } }, visible: widget.visible,
+            class: self.componentCssClasses(widget)'></div>
                 </div>
             </form>
             {% endblock form_widgets %}
