717 - Fix collection event legend display 484 - Update heritage site colours and dislay, add legend 484 - Fix legend formating for arches core updates

--- a/src/bcfms/bcfms/media/css/map_legend.css
+++ b/src/bcfms/bcfms/media/css/map_legend.css
@@ -74,10 +74,10 @@ img.frpc_ovb-very-low {
 /* Resource Model legends */
 /* Collection event */
 img.collection-event {
-    background: rgba(244,109,67,0.7);
+    /*background: rgba(244,109,67,0.7);*/
     height: 15px;
     width: 15px;
-    border: solid rgba(255,255,255,0.4) 4px;
+    border: none;
 }
 
 img.important-fossil-area {
