--- a/src/common/media/css/map_legend_common.css
+++ b/src/common/media/css/map_legend_common.css
@@ -7,6 +7,7 @@
 .legend-listing {
     padding-top: 5px;
     padding-bottom: 5px;
+    flex-direction: column;
 }
 
 .legend-listing .legend-content {
