669 - Add Fossil Sample details tab info dev - Align card model w/ 7.5.0

--- a/src/bcfms/bcfms/media/css/project.css
+++ b/src/bcfms/bcfms/media/css/project.css
@@ -1,3 +1,10 @@
 @import "project_common.css";
 @import "map_legend.css";
 
+/* Details tab rules */
+dl.geological-age > dd > div,
+dl.stratigraphy > dd > div.stratigraphy-level > div
+{
+   display: inline-block;
+}
+
