479 - Recursively search for widgets and tiles, add details data 479 - Use default report for Publications dev - Bug fix for infinite recursion in number and date widgets in Arches Core

--- a/src/bcfms/bcfms/media/css/project.css
+++ b/src/bcfms/bcfms/media/css/project.css
@@ -8,3 +8,16 @@ dl.stratigraphy > dd > div.stratigraphy-level > div
    display: inline-block;
 }
 
+.publication-identifier-type::before {
+   content: "(";
+}
+
+.publication-identifier-type::after {
+   content: ")";
+}
+
+.publication-identifier-type {
+   color: rgb(120,120,120);
+   font-style: italic;
+}
+
