--- a/src/bcfms/bcfms/templates/views/report-templates/bcfms_default.htm
+++ b/src/bcfms/bcfms/templates/views/report-templates/bcfms_default.htm
@@ -27,6 +27,10 @@
                 <!-- div>Fossil Sample</div -->
                 {% include 'views/report-templates/details/fossil_sample.htm' %}
                 <!-- /ko -->
+                <!-- ko if: report.get('name') == "Publication" -->
+                <!--div>Publication</div-->
+                {% include 'views/report-templates/details/publication.htm' %}
+                <!-- /ko -->
             </div>
         </div>
     </div>
