--- a/src/bcrhp/bcrhp/templates/views/components/widgets/map.htm
+++ b/src/bcrhp/bcrhp/templates/views/components/widgets/map.htm
@@ -3,9 +3,9 @@
 {% load template_tags %}
 
 {% block form %}
-<div class="row widget-wrapper, class: nodeCssClasses">
+<div class="row widget-wrapper" data-bind="class: nodeCssClasses">
     <div class="form-group">
-        <label class="control-label widget-input-label" for="" data-bind="text:label"></label>
+        <span class="control-label widget-input-label" data-bind="text:label"></span>
         <!-- ko if: node -->
         <i data-bind="css: {'ion-asterisk widget-label-required': node.isrequired}"></i>
         <!-- /ko -->
@@ -19,63 +19,93 @@
 {% block report %}
 <dt data-bind="text: label, class: nodeCssClasses"></dt>
 <!-- ko if: summaryDetails.length === 0 -->
-<dd data-bind="class: nodeCssClasses">{% trans "None" %}</dd>
-<!-- /ko -->
-<dd data-bind="foreach: summaryDetails, class: nodeCssClasses">
-  <div style='margin-bottom:2px' data-bind="text: JSON.stringify($data.geometry)"></div>
+<dd data-bind="class: nodeCssClasses">
+    <span data-bind="text: $root.translations.none"></span>
 </dd>
+<!-- /ko -->
+<!-- ko ifnot: summaryDetails.length === 0  -->
+<dd data-bind="foreach: summaryDetails, class: nodeCssClasses">
+    <div style='margin-bottom:2px' data-bind="text: JSON.stringify($data.geometry)"></div>
+</dd>
+<!-- /ko -->
 {% endblock report %}
 
 {% block config_form %}
 <div class="control-label">
-    {% trans "Available Geometry Types" %}
+    <span data-bind="text: $root.translations.availableGeometryTypes"></span>
 </div>
 <div class="col-xs-12 pad-no crud-widget-container">
-    <input style="display:inline-block;"
-        data-bind="select2Query: {
+    <select style="display:inline-block;"
+            data-bind="select2Query: {
             select2Config: {
                 clickBubble: true,
                 value: geometryTypeList,
                 multiple: true,
                 allowClear: true,
                 minimumInputLength: 0,
-                placeholder: '{% trans "Available Geometry Types" %}',
+                placeholder: $root.translations.availableGeometryTypes,
                 data: [{
-                    text: '{% trans "Point" %}',
+                    text: $root.translations.point,
                     id: 'Point'
                 }, {
-                    text: '{% trans "Line" %}',
+                    text: $root.translations.line,
                     id: 'Line'
                 }, {
-                    text: '{% trans "Polygon" %}',
+                    text: $root.translations.polygon,
                     id: 'Polygon'
                 }, {
                     text: '{% trans "Feature" %}',
                     id: 'Feature'
                 }]
             }
-        }">
+        },
+        attr: {'aria-label': $root.translations.availableGeometryTypes}">
+    </select>
 </div>
 <div class="control-label">
-    {% trans "Map Center Longitude" %}
+    <span data-bind="text: $root.translations.mapCenterLongitude"></span>
 </div>
 <div class="col-xs-12 pad-no crud-widget-container">
-    <input type="number" id="" placeholder="{% trans " Longitude (x coordinate) " %}" class="form-control input-md widget-input" data-bind="value: centerX, valueUpdate: 'keyup'">
+    <input
+            type="number"
+            class="form-control input-md widget-input"
+            data-bind="
+            attr: {placeholder: $root.translations.longitudeXCoordinate, 'aria-label': $root.translations.longitudeXCoordinate},
+            textInput: centerX
+        "
+    >
 </div>
 <div class="control-label">
-    {% trans "Map Center Latitude" %}
+    <span data-bind="text: $root.translations.mapCenterLatitude"></span>
 </div>
 <div class="col-xs-12 pad-no crud-widget-container">
-    <input type="number" id="" placeholder="{% trans " Latitude (y coordinate) " %}" class="form-control input-md widget-input" data-bind="value: centerY, valueUpdate: 'keyup'">
+    <input
+            type="number"
+            class="form-control input-md widget-input"
+            data-bind="
+            attr: {placeholder: $root.translations.latitudeYCoordinate, 'aria-label': $root.translations.latitudeYCoordinate},
+            textInput: centerY
+        "
+    >
 </div>
 <div class="control-label">
-    {% trans "Default Zoom" %}
+    <span data-bind="text: $root.translations.defaultZoom"></span>
 </div>
 <div class="col-xs-12 pad-no crud-widget-container">
-    <input type="number" min=1 max=20 id="" placeholder="{% trans " Zoom Level " %}" class="form-control input-md widget-input" data-bind="value: zoom, valueUpdate: 'keyup'">
+    <input
+            type="number"
+            min=1
+            max=20
+            class="form-control input-md widget-input"
+            data-bind="
+            attr: {placeholder: $root.translations.zoomLevel, 'aria-label': $root.translations.zoomLevel},
+            textInput: zoom
+        "
+    >
 </div>
 {% endblock config_form %}
 
 {% block display_value %}
-<span data-bind="text: displayValue(), class: nodeCssClasses"></span> {% trans "feature(s)" %}
+<span data-bind="text: displayValue(), class: nodeCssClasses"></span>
+<span data-bind="text: $root.translations.features, class: nodeCssClasses"></span>
 {% endblock display_value %}
