628 - Update bottom banner URLs

--- a/src/bcfms/bcfms/templates/index.htm
+++ b/src/bcfms/bcfms/templates/index.htm
@@ -352,12 +352,13 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
     <div style="display: flex; flex-direction: column;">
         <div class="container">
             <ul>
-                <li><a href=".">Home</a></li>
-                <li><a href=".">Disclaimer</a></li>
-                <li><a href=".">Privacy</a></li>
-                <li><a href=".">Accessibility</a></li>
-                <li><a href=".">Copyright</a></li>
-                <li><a href=".">Contact Us</a></li>
+                <li><a href="https://www2.gov.bc.ca/gov/content/home" target="_blank">Home</a></li>
+                <li><a href="https://www2.gov.bc.ca/gov/content/about-gov-bc-ca" target="_blank">About gov.bc.ca</a></li>
+                <li><a href="https://www2.gov.bc.ca/gov/content/home/disclaimer" target="_blank">Disclaimer</a></li>
+                <li><a href="https://www2.gov.bc.ca/gov/content/home/privacy" target="_blank">Privacy</a></li>
+                <li><a href="https://www2.gov.bc.ca/gov/content/home/accessible-government" target="_blank">Accessibility</a></li>
+                <li><a href="https://www2.gov.bc.ca/gov/content/home/copyright" target="_blank">Copyright</a></li>
+                <li><a href="https://www2.gov.bc.ca/gov/content/home/get-help-with-government-services" target="_blank">Contact Us</a></li>
             </ul>
         </div>
     </div>
