714 - Added CRHP export widget

--- a/src/bcrhp/bcrhp/media/css/project.css
+++ b/src/bcrhp/bcrhp/media/css/project.css
@@ -23,3 +23,12 @@
 .card_component.dates_approximate {
     vertical-align: bottom;
 }
+
+.crhp-submit-widget {
+    display: inline-block;
+}
+.crhp-export-button {
+    padding: 10px 5px 25px 5px;
+    display: inline-block;
+    vertical-align: bottom;
+}
