752 - Update Heritage Site details tab for screen and print

--- a/src/bcrhp/bcrhp/templates/views/report-templates/bcrhp_default.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/bcrhp_default.htm
@@ -147,8 +147,9 @@
 
     <!-- Title Block -->
     <div class="report-toolbar-preview ep-form-toolbar">
-        <h4 class="report-toolbar-title"><span class="bc-report-title" data-bind="text: report.get('name')"></span> -
+        <h4 class="report-toolbar-title print-hide"><span class="bc-report-title" data-bind="text: report.get('name')"></span> -
             <span class="bc-report-title" data-bind="html: report.get('displayname') "></span></h4>
+        <h4 class="print-only">BC Register of Historic Places</h4>
 
         <!-- Tools -->
         <div class="ep-form-toolbar-tools mar-no flex">
