591 - Interim commit of Collection Event details page and search and map popup card updates dev - Make multi-value delimiter and unique list configurable in base descriptors class

--- a/src/bcfms/bcfms/templates/views/report-templates/bcfms_default.htm
+++ b/src/bcfms/bcfms/templates/views/report-templates/bcfms_default.htm
@@ -31,6 +31,10 @@
                 <!--div>Publication</div-->
                 {% include 'views/report-templates/details/publication.htm' %}
                 <!-- /ko -->
+                <!-- ko if: report.get('name') == "Fossil Collection Event" -->
+                <!--div>Publication</div-->
+                {% include 'views/report-templates/details/collection_event.htm' %}
+                <!-- /ko -->
             </div>
         </div>
     </div>
